--- a/Gevers-Autogarage/CarWindow.xaml
+++ b/Gevers-Autogarage/CarWindow.xaml
@@ -13,11 +13,20 @@
             <ColumnDefinition Width="0.7*"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center">
-            <Label FontSize="20">Merk</Label>
-            <Label FontSize="20">Model</Label>
-            <Label FontSize="20">Bouwjaar</Label>
-
+        <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center" >
+            <Label Width="200" FontSize="20">Merk</Label>
+            <Label Width="200" FontSize="20">Model</Label>
+            <Label Width="200" FontSize="20">Prijs</Label>
+            <Label Width="200" FontSize="20">Bouwjaar</Label>
         </StackPanel>
+
+        <StackPanel HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1">
+            <TextBox x:Name="tbxBrand" Width="200" Height="40" FontSize="20"></TextBox>
+            <TextBox x:Name="tbxModel" Width="200" Height="40" FontSize="20"></TextBox>
+            <TextBox x:Name="tbxPrice" Width="200" Height="40" FontSize="20"></TextBox>
+            <TextBox x:Name="tbxConstructionYear" Width="200" Height="40" FontSize="20"></TextBox>
+        </StackPanel>
+
+        <Button x:Name="btnSaveCar" Content="Opslaan" Height="50" Width="120" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="10,10,10,30" Grid.Column="2" Click="btnSaveCar_Click" />
     </Grid>
 </Window>
