--- a/Gevers-Autogarage/TradeValueWindow.xaml
+++ b/Gevers-Autogarage/TradeValueWindow.xaml
@@ -18,6 +18,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
+        <Button x:Name="btnBack" Content="Terug" Height="20" Width="50" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10" Click="btnBack_Click"/>
         <Label Content="Inruilwaarde berekenen" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="26" Grid.ColumnSpan="2" Margin="0,24,256.6,10.2" />
 
         <StackPanel Grid.Row="1" Grid.Column="0">
