--- a/GeversView/MainWindow.xaml
+++ b/GeversView/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Gevers_Autogarage.MainWindow"
+﻿<Window x:Class="GeversView.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Gevers_Autogarage"
+        xmlns:local="clr-namespace:GeversView"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
@@ -25,6 +25,7 @@
         <StackPanel Grid.Row="1" Grid.Column="0">
             <Button x:Name="btnTradeValue" Height="60px" Width="130" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Inruilwaarde berekenen" Click="btnTradeValue_Click"/>
             <Button x:Name="btnCreateOrder" Height="60px" Width="130" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Order maken" Click="btnCreateOrder_Click" />
+            <Button x:Name="btnCreateLeasePlan" Height="60px" Width="130" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Lease plan opstellen" Click="btnCreateLeasePlan_Click"/>
             <Button x:Name="btnShowOrders" Height="60px" Width="130" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Bestellingen bekijken" Click="btnShowOrders_Click"/>
             <Button x:Name="btnCreateCar" Height="60px" Width="130" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Auto aanmaken" Click="btnCreateCar_Click" Margin="1,0"/>
         </StackPanel>
