--- a/GeversView/TradeValueWindow.xaml
+++ b/GeversView/TradeValueWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Gevers_Autogarage.TradeValueWindow"
+﻿<Window x:Class="GeversView.TradeValueWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Gevers_Autogarage"
+        xmlns:local="clr-namespace:GeversView"
         mc:Ignorable="d"
         Title="TradeValueWindow" Height="450" Width="800">
     <Grid>
