--- a/GeversView/OrderView.xaml
+++ b/GeversView/OrderView.xaml
@@ -14,6 +14,6 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel x:Name="stackOrders" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="10,30,10,0" Grid.Row="0" Grid.Column="1"/>
-        <DataGrid x:Name="dgOrders" AutoGenerateColumns="True"           ItemsSource="{Binding Path=DataTable, Mode=TwoWay}" Grid.Column="1"/>
+        <DataGrid x:Name="dgOrders" AutoGenerateColumns="True" Grid.Column="1"/>
     </Grid>
 </Window>
